# sd-train

./: .coveragerc  .gitignore  README.dev.md  README.ko.md  README.md  pyproject.toml  pyrightconfig.json
scripts/: graph.py  test.py
sd_train/: __init__.py  __main__.py  cli.py
sd_train/app/: launcher.py  preflight.py  start.py
sd_train/config/: models.py  store.py
sd_train/core/: dataset_detection.py  environment_setup.py  execution.py  preflight.py  script_selection.py  source_auth.py
sd_train/domain/: path_rules.py  preflight.py  refs.py
sd_train/infra/environment/: base.py  local_env.py  ssh_env.py  types.py  vastai_env.py
sd_train/tagger/: __init__.py  caption_ops.py  core.py  model.py  stats.py
sd_train/ui/apps/: launcher.py  tagger_workspace.py
sd_train/ui/screens/: common.py  environment.py  preflight.py
tests/: helpers.py  test_app_flow.py  test_app_launcher.py  test_cli.py  test_config_store.py  test_core_dataset_detection.py  test_core_execution.py  test_core_preflight.py  test_core_script_selection.py  test_core_source_auth.py  test_domain_preflight.py  test_domain_refs.py  test_environment_factory.py  test_local_environment.py  test_path_rewrite.py  test_ssh_environment.py  test_tagger_core_safety.py  test_tagger_ops.py  test_ui_smoke.py
