[project]
name = "sd-train"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.9",
    "pydantic-argparse>=0.10.0",
    "toml==0.10.2",
    "tqdm>=4.67.1",
    "requests>=2.32.5",
    "vastai-sdk>=0.5.1",
    "pandas>=2.3.3",
    "rclone-python>=0.1.24",
    "paramiko>=4.0.0",
    "asyncssh>=2.22.0",
    "colorama>=0.4.6",
    "prompt-toolkit>=3.0.52",
    "textual>=8.0.2",
    "textual-autocomplete>=4.0.6",
    "torch>=2.10.0",
    "transformers>=4.52.4",
    "huggingface-hub>=0.36.2",
    "pillow>=12.1.1",
    "timm<1.0",
]

[project.scripts]
launch = "sd_train.cli:main"
graph = "scripts.graph:main"
test = "scripts.test:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["sd_train*", "scripts*"]
